Make sure error messages don't overflow their container

--- a/src/sass/_errors.scss
+++ b/src/sass/_errors.scss
@@ -67,6 +67,7 @@
         margin: .5rem 0 0 10px;
         padding: .2rem .5rem .2rem 1.8rem;
         color: #333;
+        overflow-wrap: break-word;
     }
     
     li.cl-error-warning {
